grammar.bnf
start ::= program EOF
program ::= statement_list
statement_list ::= statement statement_list | EPSILON
statement ::= declaration | if_statement | while_statement | print_statement | assignment
declaration ::= DHORO ID ASSIGN expression SEMI
assignment ::= ID ASSIGN expression SEMI
if_statement ::= IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_part
else_part ::= ELSE LBRACE statement_list RBRACE | EPSILON
while_statement ::= WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
print_statement ::= PRINT LPAREN expression RPAREN SEMI
expression ::= comparison
comparison ::= math_expr comp_prime
comp_prime ::= EQ math_expr comp_prime | NEQ math_expr comp_prime | GT math_expr comp_prime | LT math_expr comp_prime | GTE math_expr comp_prime | LTE math_expr comp_prime | EPSILON
math_expr ::= term math_expr_prime
math_expr_prime ::= PLUS term math_expr_prime | MINUS term math_expr_prime | EPSILON
term ::= primary term_prime
term_prime ::= MUL primary term_prime | DIV primary term_prime | EPSILON
primary ::= NUMBER | ID | TRUE | FALSE | LPAREN expression RPAREN
